--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6 col-md-6">
-					<p class="bold text-left" style="font-size: 80%">Randevu ve Bilgi: Pazartesi-Cumartesi, 10am to 10pm </p>
+					<p class="bold text-left" style="font-size: 80%">Hours: Monday - Friday, 10am to 10pm </p>
 					</div>
 					<div class="col-sm-6 col-md-6">
-					<p class="bold text-right" style="font-size: 80%">Telefon Numarasi (Whatsapp da dahil): 512-993-6000</p>
+					<p class="bold text-right" style="font-size: 80%"> Phone Number: 512-993-6000</p>
 					</div>
 				</div>
 			</div>
